--- a/html y css/header y footer.css
+++ b/html y css/header y footer.css
@@ -5,11 +5,13 @@ justify-content: space-around;
 margin-top: -10px;
 margin-left: -10px;
 margin-right: -10px;
-
+text-align: center;
 
 }
  
-.logo{ width: 30px;
-height: 30px;
-border-radius: 50%;
-align-items: center;}
+footer { margin-bottom: -10px;
+}
+
+
+
+
