--- a/html y css/header y footer.css
+++ b/html y css/header y footer.css
@@ -13,5 +13,82 @@ footer { margin-bottom: -10px;
 }
 
 
+select {
+padding: 10px;
+border: 1px solid #ccc;
+border-radius: 5px;
+background-color: #f9f9f9;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
 
 
+.menu-principal {
+  display: flex;
+  background-color: #333;
+}
+
+.menu-principal li {
+  position: relative;
+}
+
+.menu-principal a {
+  display: block;
+  padding: 15px 20px;
+  background-color: #333;
+  transition: background-color 0.3s;
+}
+
+.menu-principal a:hover {
+  background-color: #555;
+}
+
+
+.submenu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #444;
+  min-width: 200px;
+  z-index: 10;
+}
+
+.menu-principal li:hover .submenu {
+  display: block;
+}
+
+.submenu li a {
+  padding: 10px 15px;
+  display: block;
+}
+
+.submenu li a:hover {
+  background-color: #666;
+}
+
+
+@media screen and (max-width: 768px) {
+  .menu-principal {
+    flex-direction: column;
+  }
+
+  .menu-principal li {
+    width: 100%;
+  }
+
+  .submenu {
+    display: block;
+    position: static;
+    background-color: #333;
+  }
+}
